# ogham

./: .gitignore  AGENTS.md  Makefile  README.md
crates/ogham-compiler/src/: ast.rs  breaking.rs  hir.rs  index.rs  lexer.rs  lib.rs  lower.rs  parser.rs  pipeline.rs  pkg.rs  resolve.rs  stdlib.rs  syntax_kind.rs
crates/ogham-gen-proto/src/: main.rs
crates/ogham-lsp/: Cargo.toml
crates/ogham-lsp/src/: lib.rs  main.rs  state.rs
crates/ogham-lsp/tests/: integration.rs
crates/ogham-proto/: Cargo.toml
crates/oghamgen/src/: lib.rs
docs/: language.md  repository.md
docs/adr/: cmd.md  compatibility.md  language.md  package.md  plugin_sdk.md
docs/syntax/: anotations.ogham  contract.ogham  grammar.ebnf  language.md  library.ogham  models.ogham  package.md  syntax.ogham
examples/golden/: api.ogham  ir.json  ogham.gen.yaml  ogham.mod.yaml  validate_ir.py
go/: go.mod
go/ogham-gen-go/: main.go
go/oghamgen/: codegen.go  codegen_test.go  run.go
proto/: easyp.yaml
proto/assets/: Cargo.toml.tmpl
std/: ogham.mod.yaml
std/any/: any.ogham
std/decimal/: decimal.ogham
std/default/: default.ogham
std/duration/: duration.ogham
std/empty/: empty.ogham
std/fieldmask/: fieldmask.ogham
std/geo/: geo.ogham
std/money/: money.ogham
std/rpc/: rpc.ogham
std/struct/: struct.ogham
std/time/: time.ogham
std/ulid/: ulid.ogham
std/uuid/: uuid.ogham
std/validate/: validate.ogham
std/wrappers/: wrappers.ogham
ts/: package-lock.json  package.json  tsconfig.json
ts/oghamgen/: codegen.ts  codegen_test.ts  index.ts  naming.ts  naming_test.ts  run.ts
(+45 files in other folders)
